test/Fail/Issue5923.err
Issue5923.agda:16.8-12: error: [UnequalTerms]
The terms
  f tt
and
  a
are not equal at type A
when checking that the expression refl has type f tt ≡ a
